Correction: The text doesn't overflow, but I do need to resolve the absence of paragraph breaks. In this commit, I just increased some padding on the bottom of the text body.

--- a/notes/src/SingleNote/SingleNote.css
+++ b/notes/src/SingleNote/SingleNote.css
@@ -41,4 +41,5 @@
   letter-spacing: 1px;
   line-height: 32px;
   margin: 0px 31px;
+  padding-bottom: 25px;
 }
